storage/rustfs/gen-output/rustfs.rustfs.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: rustfs
    app.kubernetes.io/name: rustfs
  name: rustfs
  namespace: rustfs
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: Parallel
  replicas: 5
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: rustfs
      app.kubernetes.io/name: rustfs
  serviceName: rustfs-headless
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: rustfs
        app.kubernetes.io/name: rustfs
    spec:
      affinity:
        nodeAffinity: {}
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                - rustfs
            topologyKey: kubernetes.io/hostname
      containers:
      - command:
        - /usr/bin/rustfs
        image: rustfs/rustfs:1.0.0-alpha.89
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
          tcpSocket:
            port: 9000
          timeoutSeconds: 3
        name: rustfs
        ports:
        - containerPort: 9000
          name: endpoint
          protocol: TCP
        - containerPort: 9001
          name: console
          protocol: TCP
        readinessProbe:
          failureThreshold: 2
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 9000
          timeoutSeconds: 2
        resources:
          limits:
            cpu: "8"
            memory: 64Gi
          requests:
            cpu: "8"
            memory: 64Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /logs
          name: logs
          subPath: logs
        - mountPath: /data/rustfs0
          name: data-rustfs-0
        - mountPath: /data/rustfs1
          name: data-rustfs-1
      dnsPolicy: Default
      enableServiceLinks: false
      hostNetwork: false
      nodeSelector:
        node-role.kubernetes.io/minio: "true"
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 10001
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 10001
        runAsUser: 10001
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: group
        operator: Equal
        value: specialized
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
      partition: 0
    type: RollingUpdate
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: logs
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 256Mi
      storageClassName: local-retain
      volumeMode: Filesystem
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: data-rustfs-0
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1024Gi
      storageClassName: local-retain-data-1
      volumeMode: Filesystem
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: data-rustfs-1
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1024Gi
      storageClassName: local-retain-data-2
      volumeMode: Filesystem
