storage/rustfs/gen-output/rustfs-headless.rustfs.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: rustfs
    app.kubernetes.io/name: rustfs
  name: rustfs-headless
  namespace: rustfs
spec:
  clusterIP: None
  ports:
  - name: endpoint
    port: 9000
  - name: console
    port: 9001
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: rustfs
    app.kubernetes.io/name: rustfs
