storage/rustfs/gen-output/rustfs-svc.rustfs.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: rustfs
    app.kubernetes.io/name: rustfs
  name: rustfs-svc
  namespace: rustfs
spec:
  ports:
  - name: endpoint
    port: 9000
    targetPort: 9000
  - name: console
    port: 9001
    targetPort: 9001
  selector:
    app.kubernetes.io/instance: rustfs
    app.kubernetes.io/name: rustfs
  type: ClusterIP
